// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with the flag off the rating screen is the legacy screen draws the same tree before a choice, with a choice, and once saved: eligible, 4 stars and a tag 1`] = `
"{
 "type": "SafeAreaView",
 "props": {
  "edges": [
   "top",
   "bottom",
   "left",
   "right"
  ]
 },
 "children": [
  {
   "type": "DetailTopBar",
   "props": {
    "title": "Ocena saradnje",
    "backLabel": "Nazad na Dogovor"
   },
   "children": null
  },
  {
   "type": "View",
   "props": {},
   "children": [
    {
     "type": "ScrollView",
     "props": {
      "contentContainerStyle": [
       {
        "width": "100%",
        "maxWidth": 640,
        "alignSelf": "center",
        "paddingHorizontal": 20,
        "paddingTop": 8,
        "gap": 24
       },
       {
        "paddingBottom": 24
       },
       null
      ],
      "keyboardShouldPersistTaps": "handled"
     },
     "children": [
      {
       "type": "View",
       "props": {
        "accessible": true,
        "accessibilityLabel": "Nikola Petrović, Traži pomoć, Unos ormara"
       },
       "children": [
        {
         "type": "View",
         "props": {
          "accessible": false
         },
         "children": [
          {
           "type": "View",
           "props": {
            "accessible": false,
            "importantForAccessibility": "no-hide-descendants",
            "accessibilityElementsHidden": true
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "label",
              "maxFontSizeMultiplier": 1,
              "numberOfLines": 1
             },
             "children": [
              "N"
             ]
            }
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "accessible": false,
          "variant": "title",
          "numberOfLines": 2
         },
         "children": [
          "Nikola Petrović"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Traži pomoć"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted",
          "numberOfLines": 2
         },
         "children": [
          "Unos ormara"
         ]
        }
       ]
      },
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "T",
         "props": {
          "accessibilityRole": "header",
          "variant": "heading"
         },
         "children": [
          "Kako je prošla saradnja?"
         ]
        },
        {
         "type": "View",
         "props": {
          "accessibilityRole": "radiogroup",
          "accessibilityLabel": "Ocena od 1 do 5"
         },
         "children": [
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 1 od 5",
            "accessibilityHint": "Loše",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": true
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 2 od 5",
            "accessibilityHint": "Ispod očekivanja",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": true
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 3 od 5",
            "accessibilityHint": "Dobro",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": true
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 4 od 5",
            "accessibilityHint": "Vrlo dobro",
            "accessibilityState": {
             "checked": true,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": true
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 5 od 5",
            "accessibilityHint": "Odlično",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "accessibilityLiveRegion": "polite",
          "variant": "bodyStrong"
         },
         "children": [
          "Vrlo dobro"
         ]
        }
       ]
      },
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "View",
         "props": {},
         "children": [
          {
           "type": "T",
           "props": {
            "variant": "heading",
            "accessibilityRole": "header"
           },
           "children": [
            "Šta je obeležilo saradnju?"
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Nije obavezno · najviše 3"
         ]
        },
        {
         "type": "View",
         "props": {},
         "children": [
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Po dogovoru",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Po dogovoru"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Pažljivo",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Pažljivo"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Jasna komunikacija",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Jasna komunikacija"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Na vreme",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Na vreme"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Pouzdano",
            "accessibilityState": {
             "checked": true,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "Check",
             "props": {
              "size": 16,
              "color": "#00845A",
              "weight": "bold"
             },
             "children": null
            },
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Pouzdano"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Uz poštovanje",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Uz poštovanje"
             ]
            }
           ]
          }
         ]
        }
       ]
      }
     ]
    },
    {
     "type": "View",
     "props": {},
     "children": [
      {
       "type": "View",
       "props": {
        "testID": "flow-footer"
       },
       "children": [
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted",
          "testID": "review-save-warning"
         },
         "children": [
          "Ocenu posle čuvanja ne možeš da menjaš."
         ]
        },
        {
         "type": "Action",
         "props": {
          "label": "Sačuvaj ocenu",
          "loading": false,
          "disabled": false
         },
         "children": null
        }
       ]
      }
     ]
    }
   ]
  }
 ]
}"
`;

exports[`with the flag off the rating screen is the legacy screen draws the same tree before a choice, with a choice, and once saved: eligible, nothing chosen 1`] = `
"{
 "type": "SafeAreaView",
 "props": {
  "edges": [
   "top",
   "bottom",
   "left",
   "right"
  ]
 },
 "children": [
  {
   "type": "DetailTopBar",
   "props": {
    "title": "Ocena saradnje",
    "backLabel": "Nazad na Dogovor"
   },
   "children": null
  },
  {
   "type": "View",
   "props": {},
   "children": [
    {
     "type": "ScrollView",
     "props": {
      "contentContainerStyle": [
       {
        "width": "100%",
        "maxWidth": 640,
        "alignSelf": "center",
        "paddingHorizontal": 20,
        "paddingTop": 8,
        "gap": 24
       },
       {
        "paddingBottom": 24
       },
       null
      ],
      "keyboardShouldPersistTaps": "handled"
     },
     "children": [
      {
       "type": "View",
       "props": {
        "accessible": true,
        "accessibilityLabel": "Nikola Petrović, Traži pomoć, Unos ormara"
       },
       "children": [
        {
         "type": "View",
         "props": {
          "accessible": false
         },
         "children": [
          {
           "type": "View",
           "props": {
            "accessible": false,
            "importantForAccessibility": "no-hide-descendants",
            "accessibilityElementsHidden": true
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "label",
              "maxFontSizeMultiplier": 1,
              "numberOfLines": 1
             },
             "children": [
              "N"
             ]
            }
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "accessible": false,
          "variant": "title",
          "numberOfLines": 2
         },
         "children": [
          "Nikola Petrović"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Traži pomoć"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted",
          "numberOfLines": 2
         },
         "children": [
          "Unos ormara"
         ]
        }
       ]
      },
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "T",
         "props": {
          "accessibilityRole": "header",
          "variant": "heading"
         },
         "children": [
          "Kako je prošla saradnja?"
         ]
        },
        {
         "type": "View",
         "props": {
          "accessibilityRole": "radiogroup",
          "accessibilityLabel": "Ocena od 1 do 5"
         },
         "children": [
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 1 od 5",
            "accessibilityHint": "Loše",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 2 od 5",
            "accessibilityHint": "Ispod očekivanja",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 3 od 5",
            "accessibilityHint": "Dobro",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 4 od 5",
            "accessibilityHint": "Vrlo dobro",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "radio",
            "accessibilityLabel": "Ocena 5 od 5",
            "accessibilityHint": "Odlično",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "scaleTo": 1,
            "hitSlop": 0
           },
           "children": [
            {
             "type": "RatingStar",
             "props": {
              "full": false
             },
             "children": null
            }
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "accessibilityLiveRegion": "polite",
          "variant": "bodyStrong"
         },
         "children": [
          " "
         ]
        }
       ]
      },
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "View",
         "props": {},
         "children": [
          {
           "type": "T",
           "props": {
            "variant": "heading",
            "accessibilityRole": "header"
           },
           "children": [
            "Šta je obeležilo saradnju?"
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Nije obavezno · najviše 3"
         ]
        },
        {
         "type": "View",
         "props": {},
         "children": [
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Po dogovoru",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Po dogovoru"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Pažljivo",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Pažljivo"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Jasna komunikacija",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Jasna komunikacija"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Na vreme",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Na vreme"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Pouzdano",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Pouzdano"
             ]
            }
           ]
          },
          {
           "type": "Press",
           "props": {
            "accessibilityRole": "checkbox",
            "accessibilityLabel": "Uz poštovanje",
            "accessibilityState": {
             "checked": false,
             "disabled": false
            },
            "disabled": false,
            "haptic": "select",
            "hitSlop": 0
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "note"
             },
             "children": [
              "Uz poštovanje"
             ]
            }
           ]
          }
         ]
        }
       ]
      }
     ]
    },
    {
     "type": "View",
     "props": {},
     "children": [
      {
       "type": "View",
       "props": {
        "testID": "flow-footer"
       },
       "children": [
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted",
          "testID": "flow-footer-reason",
          "accessibilityLiveRegion": "polite"
         },
         "children": [
          "Izaberi ocenu od 1 do 5 pre slanja."
         ]
        },
        {
         "type": "Action",
         "props": {
          "label": "Sačuvaj ocenu",
          "loading": false,
          "disabled": true
         },
         "children": null
        }
       ]
      }
     ]
    }
   ]
  }
 ]
}"
`;

exports[`with the flag off the rating screen is the legacy screen draws the same tree before a choice, with a choice, and once saved: saved 1`] = `
"{
 "type": "SafeAreaView",
 "props": {
  "edges": [
   "top",
   "bottom",
   "left",
   "right"
  ]
 },
 "children": [
  {
   "type": "DetailTopBar",
   "props": {
    "title": "Ocena saradnje",
    "backLabel": "Nazad na Dogovor"
   },
   "children": null
  },
  {
   "type": "View",
   "props": {},
   "children": [
    {
     "type": "ScrollView",
     "props": {
      "contentContainerStyle": [
       {
        "width": "100%",
        "maxWidth": 640,
        "alignSelf": "center",
        "paddingHorizontal": 20,
        "paddingTop": 8,
        "gap": 24
       },
       {
        "paddingBottom": 24
       },
       null
      ],
      "keyboardShouldPersistTaps": "handled"
     },
     "children": [
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "View",
         "props": {
          "accessible": false
         },
         "children": [
          {
           "type": "View",
           "props": {
            "accessible": false,
            "importantForAccessibility": "no-hide-descendants",
            "accessibilityElementsHidden": true
           },
           "children": [
            {
             "type": "T",
             "props": {
              "variant": "label",
              "maxFontSizeMultiplier": 1,
              "numberOfLines": 1
             },
             "children": [
              "N"
             ]
            }
           ]
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "bodyStrong",
          "numberOfLines": 2
         },
         "children": [
          "Nikola Petrović"
         ]
        }
       ]
      },
      {
       "type": "View",
       "props": {},
       "children": [
        {
         "type": "T",
         "props": {
          "accessibilityRole": "header",
          "variant": "title"
         },
         "children": [
          "Ocena je sačuvana."
         ]
        },
        {
         "type": "View",
         "props": {},
         "children": [
          {
           "type": "StarGlow",
           "props": {
            "width": 272,
            "play": true,
            "delay": 140
           },
           "children": [
            {
             "type": "View",
             "props": {
              "accessible": false,
              "importantForAccessibility": "no-hide-descendants",
              "accessibilityElementsHidden": true
             },
             "children": [
              {
               "type": "View",
               "props": {},
               "children": [
                {
                 "type": "RatingStar",
                 "props": {
                  "full": true
                 },
                 "children": null
                }
               ]
              },
              {
               "type": "View",
               "props": {},
               "children": [
                {
                 "type": "RatingStar",
                 "props": {
                  "full": true
                 },
                 "children": null
                }
               ]
              },
              {
               "type": "View",
               "props": {},
               "children": [
                {
                 "type": "RatingStar",
                 "props": {
                  "full": true
                 },
                 "children": null
                }
               ]
              },
              {
               "type": "View",
               "props": {},
               "children": [
                {
                 "type": "RatingStar",
                 "props": {
                  "full": true
                 },
                 "children": null
                }
               ]
              },
              {
               "type": "View",
               "props": {},
               "children": [
                {
                 "type": "RatingStar",
                 "props": {
                  "full": false
                 },
                 "children": null
                }
               ]
              }
             ]
            }
           ]
          },
          {
           "type": "Pecat",
           "props": {
            "label": "Ocenjeno",
            "tone": "green",
            "shape": "check",
            "tickKind": "success",
            "play": true
           },
           "children": null
          }
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "body"
         },
         "children": [
          "Tvoja ocena: 4 od 5"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Pouzdano"
         ]
        },
        {
         "type": "T",
         "props": {
          "variant": "note",
          "tone": "muted"
         },
         "children": [
          "Ocena pomaže drugima da biraju i ne može da se menja."
         ]
        }
       ]
      }
     ]
    },
    {
     "type": "View",
     "props": {},
     "children": [
      {
       "type": "View",
       "props": {
        "testID": "flow-footer"
       },
       "children": [
        {
         "type": "Action",
         "props": {
          "label": "Nazad na Dogovor"
         },
         "children": null
        }
       ]
      }
     ]
    }
   ]
  }
 ]
}"
`;
